--- a/theory.tex
+++ b/theory.tex
@@ -274,7 +274,7 @@ for any vectors $\E_1, \E_2$. Such a relation can be fully described by a \texti
 \end{equation}
 Elaborate discussion on the restrictions on this tensor and its physical interpretation can be found e.g. in \cite[pp. 678--686]{born1999book}. An analogous treatment can be applied to the magnetic permeability, though it is much less commonly needed.
 %}}}
-\paragraph{Anisotropic local media}  % TODO%{{{
+\paragraph{Dispersion relations in anisotropic local media}  % TODO%{{{
 If the medium response depends on the direction of the field, the dispersion relations can not be directly obtained by substitution into the wave equation. 
 It is important to notice that also the leftmost term in 
 \begin{equation} - \kk (\kk \cdot \E) + k^2 \E = \varepsilon_0 \epsrl(\omega) \mu_0 \murl(\omega) \omega^{2} \E, \tag{\ref{eq_wavek_disp} \again} \end{equation}
