--- a/numeric.tex
+++ b/numeric.tex
@@ -520,34 +520,28 @@ from a 26 $\upmu$m thick strontium titanate (STO) slab.\cite{nemec2009tunable} T
 The curves computed using the FDTD simulations are compared to the experimental ones in Fig. \ref{fg_STO_bar_rt}, with a very good match in three well-resolved resonance peaks, and also in the high reflectivity ($|r| > 0.9$) in most of the spectrum which is caused by a great impedance mismatch between the dielectric and the surrounding air.
 
 \begin{figure}[ht] \centering \caption{Parametric scan through the strontium titanate bar width, loss spectra computed as $1-|r^2|-|t^2|$. The bar width of 66 $\upmu$m is denoted by thin white line. Different modes are joined by black curves and their electric field shapes are drawn above the plot.} \includegraphics[width=\textwidth]{img/STOBarC_modes2.pdf} \label{fg_STO_bar_modes} \end{figure}
-To briefly illustrate further possibilities of the numerical simulations, we scanned the relative width of the STO bar, and computed the relative energetic loss in the structure as $1-|r^2|-|t^2|$. Each loss peak can be clearly associated with one resonant mode in the dielectric, as shown in Fig. \ref{fg_STO_bar_modes}. The two-dimensional scan can reveal rich information about the underlying physics, most importantly, we see that the frequency at which different modes resonate has a different power dependence on the bar width. Note that both vertical and horizontal axes are logarithmic, so this exponent can be directly estimated from the sloped line the resonance peaks were fitted with. Only modes with mirror symmetry in the transverse direction ($y$-axis) couple to the wave.
-%% XXX XXX
+To briefly illustrate further possibilities of the numerical simulations, we scanned the relative width of the STO bar, and computed the relative energetic loss in the structure as $1-|r^2|-|t^2|$. Each loss peak can be clearly associated with one resonant mode in the dielectric, as shown in Fig. \ref{fg_STO_bar_modes}. The two-dimensional scan can reveal rich information about the underlying physics, most importantly, we see that the frequency at which different modes resonate has a different power dependence on the bar width. Note that both vertical and horizontal axes are logarithmic, so this exponent can be directly estimated from the slope of the line. Only modes with a mirror symmetry in the transverse direction ($y$-axis) couple to the wave.
 
-It can also be read from Fig. \ref{fg_STO_bar_modes} that around the bar width of 66 $\upmu$m, as denoted by a horizontal white line, there is actually a frequency cross-over of two modes, a narrow transverse one and a more broader longitudinal one. This explains why in Fig. \ref{fg_STO_bar_rt} the first resonance has an obviously asymmetric shape in the simulated and experimental spectra.  %% This would form a typical Fano resonance if the losses were lower.
-More elaborate discussion of periodic structures composed of dielectric bars/rods oriented either along the electric or thee magnetic field will follow in the Sections \ref{sect_diel_rods_mag} and \ref{sect_diel_rods_el}.
+It can also be seen from Fig. \ref{fg_STO_bar_modes} that around the bar width of 66 $\upmu$m, as denoted by the horizontal white line, there is actually a frequency cross-over of two modes, a narrow transverse one and a broader longitudinal one. This explains why in Fig. \ref{fg_STO_bar_rt} the first resonance has an obviously asymmetric shape in the simulated and experimental spectra.  %% This would form a typical Fano resonance if the losses were lower.
+A more elaborate discussion of periodic structures composed of dielectric bars/rods oriented either along the electric or thee magnetic field will follow in the Sections \ref{sect_diel_rods_mag} and \ref{sect_diel_rods_el}.
 %}}}
 \paragraph{Retrieval of effective parameters} %{{{
-So far, we computed the amplitude and phase of frequency-dependent reflection $r(f)$ and transmission $t(f)$ for a finite number of metameterial cell layers. 
-These data, if supplied with the expected cell thickness $d$, are also sufficient to deduce the behaviour of a periodic structure composed of infinity of such unit cells, i.e., to retrieve the effective parameters of the structure. % TODO this needs some discussion, if it is possible etc. ... or at least to get isofrequency contours if effparam do not exist, or if the method is too approximate
-To this end, we employ the Fresnel inversion and show a custom approach how to obtain physically sound selection of the correct branch of solution.
+So far, we computed the amplitude and phase of frequency-dependent reflectance $r(f)$ and transmittance $t(f)$ for a finite number of metameterial cell layers. 
+These data, if supplied with the cell thickness $d$, are also sufficient to deduce the behaviour of a periodic structure composed of an infinity of such unit cells, i.e., to retrieve the effective parameters of the structure. % TODO this needs some discussion, if it is possible etc. ... or at least to get isofrequency contours if effparam do not exist, or if the method is too approximate
+To this end, we employ the Fresnel inversion and a custom way of obtaining physically meaningful  solution.
 % TODO develop this somehow, cite Rockstuhs2004, relate to spatial dispersion and nonlocality - the evanescent field can be decomposed into dipoles, quadrupoles etc}
 %It shall be noted that although the structure consists of a single layer, transmission and reflection is measured in the form of radiated waves to compute effective parameters for an infinite structure. The energy transferred by near field (evanescent wave) is neglected here. 
 %The field components at the first monitor plane ($E_x^{(1)}, H_y^{(1)}$) and at the second one ($H_y^{(2)}, E_x^{(2)}$) give sufficient information for this, for instance at which frequencies are the photonic bands and which $K$-vector the wave will have. 
 
 % todo check if symbols known
-\textit{Fresnel coefficients} $r_1$, $t_1$ give the reflection and transmission from an interface of two homogeneous media described by their impedances $Z_1, Z_2$:
+\textit{Fresnel coefficients} $r_1$, $t_1$ give the reflectance and transmittance from an interface of two homogeneous media described by their impedances $Z_1, Z_2$:
 \begin{equation} r_1 = \frac{Z_2 - Z_1}{Z_2 + Z_1}, \quad \quad \quad t_1 = \frac{2 Z_2}{Z_2 + Z_1}, \quad \text{for perpendicular incidence}. \label{eq_fresnel}\end{equation}
-Note that in the literature, the Fresnel coefficients are often expressed in a slightly different form, using the index of refraction $N$ instead of wave impedance $Z$; this holds only for common nonmagnetic media where $\mu_r = 1$ and therefore $N \equiv \sqrt{\varepsilon_r \mu_r} = \sqrt{\mu_r/\varepsilon_r } \equiv 1/Z$ 
-The complex reflection $r_{s}$ and transmission $t_{s}$ of a homogeneous slab with given wave impedance $z$, index of refraction $n$ and thickness $d$ can be computed by summing the infinite series of internal reflections.
+Note that in the literature, the Fresnel coefficients are often expressed in a slightly different form, using the index of refraction $N$ instead of wave impedance $Z$; this holds only for common nonmagnetic media where $\mu_r = 1$ and therefore 
+$$N \equiv \sqrt{\varepsilon_r \mu_r} = \sqrt{\mu_r/\varepsilon_r } \equiv 1/Z.$$ 
+The complex reflectance $r_{s}$ and transmittance $t_{s}$ of a homogeneous slab with given wave impedance $z$, index of refraction $n$ and thickness $d$ can be computed by summing the infinite series of internal reflections.
 
 \mdf{TODO add infinite sums for Fabry-Pérot resonances in a slab}
-
-% todo expressions -> develop from Fresnel to effparam -> Put into appendix?
-When the thickness of the slab $d$ and the frequency $f$ are known, the obtained formulae can be analytically inverted\cite{smith2002determination} %% TODO other earlier sources for NRW?
-, yielding its:
-\begin{equation} \Neff = \frac{\arccos\left(\frac{1 - r^2+t^2}{2 t}\right) \cdot sign + 2\pi \cdot branch}{2\pi f d / c}, \label{eq_fresinvn}\end{equation}
-and also its wave impedance:
-\begin{equation} \Zeff = \pm \sqrt{\frac{\left[(1+r)^2 - t^2\right]}{(1-r)^2 - t^2}}. \label{eq_fresinvz}\end{equation}
+% TODO expressions -> develop from Fresnel to effparam -> Put into appendix?
 
 Knowing the complex $r(f)$ and $t(f)$ along with the sample thickness $d$, we may use the
 classical algorithm \cite{smith2002determination} to retrieve the effective index of refraction:
@@ -560,13 +554,14 @@ and the effective impedance:
 \end{equation}
 where $k = 2\pi f/c$ is the wave vector in vacuum and $c$ is the speed of light.
 
-
 %}}}
 \paragraph{Unambiguous arccosine} %{{{
-The well-known complication of the described approach is that the arccosine and square root are ambiguous functions \cite{simovski2009material}.
+The well-known complication of the described approach is that the arccosine and square root are ambiguous functions \cite{simovski2009material}. %% TODO change this cite?
 %, yielding multiple solutions with different branches (indexed by an integer $m$) and signs. 
-The sign and branch of the refraction index (indexed by an integer $m$), and the sign of wave impedance are not known a priori.  These three discrete-valued functions have to be selected during computation. The absence of abrupt skips within the allowed photonic bands, passivity requirements (Im$(N) \geq 0$, Re$(Z) \geq 0$) %% TODO check for the e+iomegat sign convention
-and the Kramers-Kronig relations are a good verification of a correct solution. We have written routines that perform this task automatically after each FDTD simulation is run. Not knowing the index of refraction is equivalent to expressing the folded dispersion curves, so the postprocesing of FDTD data corresponds to unambiguous \textit{unfolding} of the dispersion curves.
+The sign and branch of the refraction index (indexed by an integer $m$), and the sign of wave impedance are not known a priori.  These three discrete-valued functions have to be selected during computation. The absence of discontinuities % TODO but they ARE discontinuities at low-loss resonances - rewrite this?
+in the allowed photonic bands, passivity requirements % (Im$(N) \geq 0$, Re$(Z) \geq 0$) %% TODO FIXME check for the e+iomegat sign convention
+and the Kramers-Kronig relations are a good verification of a correct solution. We have written routines that perform this task automatically after each FDTD simulation is run. Not knowing the correct branch of the index of refraction is equivalent to using the folded dispersion curves (cf. Par. \ref{par_disp_curv_per}), %% TODO refer to the theory
+so the postprocesing of FDTD data corresponds to unambiguous \textit{unfolding} of the dispersion curves.
 
 %See ~/p/MEEP_2013/130711_EWires/19_TiO2_cellscan_thick_HR/
 \begin{figure} \centering \caption{\textbf{a,b)} Real and imaginary parts of the arccosine of complex argument $\upsilon$. Branch cuts are denoted with thick lines. The thick curve shows a possible trajectory of  $\upsilon(f)$ (upon a frequency variation), which intersects the branch cuts in points marked as R, L. \textbf{c)} From top to bottom: example function  $\upsilon(f)$, its or- dinary arccosine, example branch and sign choices ensuring the continuity of the arccosine function, and the continuous version of $\arccos_{\mathrm{c}}(\upsilon)$, as determined by the algorithm described.} \includegraphics[width=16cm]{img/continuous_arccos/continuous_arccos_new.pdf} \label{fg_arccos}
@@ -574,11 +569,13 @@ and the Kramers-Kronig relations are a good verification of a correct solution. 
 We deal with a passive medium, consequently we impose Im$(\Neff)>0$ %TODO WRONG, sign must be opposite
  and Re$(\Zeff)>0$. 
 To facilitate processing of the results, we adopted an approach different from earlier published works \cite{smith2002determination,chen2004robust}
-that ensures the continuity of effective parameters as a function of frequency on pure mathematical basis. This continuity is required by Kramers-Kronig relations if nonzero (but otherwise arbitrarily small) losses are introduced to the system. 
+that ensures the continuity of effective parameters as a function of frequency on pure mathematical basis. This continuity, and the correct branch of the optical constants  %% TODO what missing?
+can be ensured by choosing the branch conforming with
+Kramers-Kronig relations if nonzero (but otherwise arbitrarily small) losses are introduced to the system. 
 The important point consists in identifying the branch cuts of arccosine in the complex plane (Fig.\ \ref{fg_arccos}a,b). 
 \begin{enumerate}
 \item{
-If, by increasing the frequency, the arccos argument, $v = (1 - r^2+t^2)/(2 t)$, passes through the right branch cut [i.e.  for $v= u+i 0$ where $u>1$], the real part of arccos$(v)$ touches zero, whereas the imaginary part is non-zero and changes its sign. The continuity is restored if, from this frequency on, one reverses the sign of the arccos term (point "R" in Fig. \ref{fg_arccos}c). 
+If, by increasing the frequency, the arccos argument, $v = (1 - r^2+t^2)/(2 t)$, passes through the right branch cut [i.e.  for $v= u+i 0$ where $u>1$], the real part of arccos$(v)$ touches zero, whereas the imaginary part is non-zero and changes its sign. The continuity is achieved if, from this frequency on, one reverses the sign of the arccos term (point "R" in Fig. \ref{fg_arccos}c). 
 } 
 \item{
 The situation is slightly more complicated at the left branch cut [i.e. for $v = u+i 0$ with $u<-1$], where the imaginary part of $\arccos(v)$ experiences again a step-like change of the sign and the real part reaches the value of $\pi$. The continuity is then restored upon a sign reversal accompanied by a branch index change,  illustrated by the point "L" in Fig. \ref{fg_arccos}c. 
